# ros-cadastral-parcels

./: .gitignore  README.md  data_template.yaml  download.py  info.py  ingester.py  ogr_definitions.py  pyproject.toml  ros_cadastral_parcels_definition.py  ros_cadastral_parcels_ingest.py  ros_cadastral_parcels_model.py  sandbox_definitions.py  setup.cfg
